--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		],
 		"allowJs": true,
 		"skipLibCheck": true,
-		"strict": false,
+		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"noEmit": true,
 		"esModuleInterop": true,
@@ -19,8 +19,8 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"noFallthroughCasesInSwitch": true,
-		//"noUnusedLocals": true,
-		//"noUnusedParameters": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
 	},
 	"include": [
 		"**/*.d.ts",
