--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,21 +1,30 @@
 {
 	"compilerOptions": {
 		"strict": true,
+		//"baseUrl": "../node_modules",
 		"target": "es5",
 		"lib": ["es5", "dom"],
 		"types": ["cypress"]
 	},
-	"include": ["**/*.ts"]
+	"include": [
+		"**/*.ts"
+	]
 }
+
+//"include": [
+//	"plugins/index.js",
+//	"support/index.js",
+//	"support/commands.js"
+//]
 
 // https://docs.cypress.io/guides/tooling/typescript-support#Types-for-custom-commands
 
-//	cypress/support/index.d.ts
-//	declare namespace Cypress {
-//		interface Chainable {
-//			typeRandomWords(
-//				count?: number,
-//				options?: Partial<TypeOptions>
-//			): Chainable<Element>
-//		}
+//cypress/support/index.d.ts
+//declare namespace Cypress {
+//	interface Chainable {
+//		typeRandomWords(
+//			count?: number,
+//			options?: Partial<TypeOptions>
+//		): Chainable<Element>
 //	}
+//}
