--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "cypress:headless": "cypress run"
   },
   "dependencies": {
-    "@aws-sdk/client-cognito-identity": "^3.78.0",
-    "@aws-sdk/client-s3": "^3.78.0",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.78.0",
+    "@aws-sdk/client-cognito-identity": "^3.80.0",
+    "@aws-sdk/client-s3": "^3.80.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.80.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "next": "^12.1.5",
     "next-redux-wrapper": "^7.0.5",
@@ -30,10 +31,10 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.29",
+    "@types/node": "^17.0.30",
     "@types/papaparse": "^5.3.2",
     "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
+    "@types/react-dom": "^18.0.3",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
     "babel-plugin-styled-components": "^2.0.7",
@@ -41,6 +42,6 @@
     "eslint": "^8.14.0",
     "eslint-config-next": "^12.1.5",
     "eslint-plugin-cypress": "^2.12.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   }
 }
