--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,9 +1,12 @@
 {
 	"compilerOptions": {
-		"strict": true,
-		//"baseUrl": "../node_modules",
 		"target": "es5",
-		"lib": ["es5", "dom"],
+		"lib": [
+			"es5",
+			"dom"
+		],
+		"allowJs": true,
+		"strict": true,
 		"types": ["cypress"]
 	},
 	"include": [
