--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "cypress:headless": "cypress run"
   },
   "dependencies": {
-    "@aws-sdk/client-cognito-identity": "^3.80.0",
-    "@aws-sdk/client-s3": "^3.80.0",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.80.0",
+    "@aws-sdk/client-cognito-identity": "^3.82.0",
+    "@aws-sdk/client-s3": "^3.83.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.82.0",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
-    "next": "^12.1.5",
+    "next": "^12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "papaparse": "^5.3.2",
     "react": "^18.1.0",
@@ -31,7 +31,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.30",
+    "@types/node": "^17.0.31",
     "@types/papaparse": "^5.3.2",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
@@ -40,8 +40,9 @@
     "babel-plugin-styled-components": "^2.0.7",
     "cypress": "^9.6.0",
     "eslint": "^8.14.0",
-    "eslint-config-next": "^12.1.5",
+    "eslint-config-next": "^12.1.6",
     "eslint-plugin-cypress": "^2.12.1",
+    "nock": "^13.2.4",
     "typescript": "^4.6.4"
   }
 }
