--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "cypress:headless": "cypress run"
   },
   "dependencies": {
-    "@aws-sdk/client-cognito-identity": "^3.82.0",
-    "@aws-sdk/client-s3": "^3.83.0",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.82.0",
+    "@aws-sdk/client-cognito-identity": "^3.87.0",
+    "@aws-sdk/client-s3": "^3.87.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.87.0",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "next": "^12.1.6",
@@ -33,16 +33,19 @@
   "devDependencies": {
     "@types/node": "^17.0.31",
     "@types/papaparse": "^5.3.2",
-    "@types/react": "^18.0.8",
+    "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
+    "aws-sdk-client-mock": "^0.6.2",
     "babel-plugin-styled-components": "^2.0.7",
-    "cypress": "^9.6.0",
-    "eslint": "^8.14.0",
+    "cypress": "^9.6.1",
+    "eslint": "^8.15.0",
     "eslint-config-next": "^12.1.6",
     "eslint-plugin-cypress": "^2.12.1",
     "nock": "^13.2.4",
-    "typescript": "^4.6.4"
+    "remove": "^0.1.5",
+    "typescript": "^4.6.4",
+    "yarn": "^1.22.18"
   }
 }
