--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.87.0",
-    "@aws-sdk/client-s3": "^3.87.0",
+    "@aws-sdk/client-s3": "^3.88.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.87.0",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
@@ -31,7 +31,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
+    "@types/node": "^17.0.32",
     "@types/papaparse": "^5.3.2",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
@@ -44,7 +44,6 @@
     "eslint-config-next": "^12.1.6",
     "eslint-plugin-cypress": "^2.12.1",
     "nock": "^13.2.4",
-    "typescript": "^4.6.4",
-    "yarn": "^1.22.18"
+    "typescript": "^4.6.4"
   }
 }
