--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "next lint",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "cypress:headless": "cypress run"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.87.0",
@@ -31,10 +31,12 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.32",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@types/node": "^17.0.34",
     "@types/papaparse": "^5.3.2",
     "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
+    "@types/react-dom": "^18.0.4",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
     "aws-sdk-client-mock": "^0.6.2",
@@ -43,6 +45,9 @@
     "eslint": "^8.15.0",
     "eslint-config-next": "^12.1.6",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-testing-library": "^5.5.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "nock": "^13.2.4",
     "typescript": "^4.6.4"
   }
