--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,20 @@
 {
+	"root": true,
 	"extends": [
 		"next/core-web-vitals"
+	],
+	"plugins": [
+		"testing-library"
+	],
+	"overrides": [
+		{
+			"files": [
+				"**/__tests__/**/*.[jt]s?(x)",
+				"**/src/?(*.)+(spec|test).[jt]s?(x)"
+			],
+			"extends": [
+				"plugin:testing-library/react"
+			]
+		}
 	]
 }
